# lux-aenigma

./: .flake8  .gitignore  README.md  imgui.ini  pyproject.toml
lux/: __init__.py  __main__.py  consts.py  get_window.py  level.py  lux.py  lux_window.py
lux/components/: __init__.py  base.py  control.py  core.py  player.py  sprite.py
lux/data/: __init__.py
lux/data/config/: active_input.toml  consts.toml  default_input.toml  level_config.toml  levels.toml  save_TEMPLATE.toml
lux/data/levels/: template.toml  test-player.toml  test_player.toml
lux/data/shaders/: orbit_vertex.glsl  player_sdf_fs.glsl  player_sdf_gs.glsl  player_sdf_vs.glsl  points_fragment.glsl  points_vertex.glsl
lux/engine/: color.py  colour.py  math.py  maths.py  new.py  upscale_renderer.py
lux/engine/control_points/: control_point.py  dof.py
lux/engine/debug/: __init__.py  (+7 more)
lux/level/: level_protocols.py
lux/lib/: musicmixer.py
lux/renderers/: base.py
lux/rendering/: player_sdf_shader.py
lux/setup/: __init__.py  launch.py  launch_window.py  logging.py  lux_window.py  splash_screen.py
lux/shaders/: orbit_vertex.glsl  points_vertex.glsl
lux/systems/: __init__.py  base.py  control.py  debug.py  player.py  player_renderer.py  sprite_renderer.py
lux/util/: __init__.py  colour.py  dev_menu.py  draw.py  duration_tracker.py  maths.py  music_mixer.py  notifier.py  procedural_animator.py  shader.py  view.py
lux/views/: TEMPLATE.py  editor.py  fast_test.py  level.py  level_test.py  main_menu.py  mainmenu.py  march_square_view.py  musicmixer.py  nothing.py  player.py  scene.py  scene_select.py  sevensegtest.py  something.py  splash_screen.py  tri_test.py
test/: __init__.py
util/: README.md  async_loader.py  classproperty.py  context_perf.py  notifier.py  uuid_ref.py
(+41 files in other folders)
