[project]
name="Lux-Aenigma"
description="A short light based puzzle game built with Python Arcade"
license = {text = "MIT License"}
readme="README.md"
version="26.03.2024a"
dependencies=[
    "arcade>=3.0.0.dev25",
    "imgui[pyglet]"
]
requires-python= ">= 3.11"
authors =  [
    {name = "DragonMoffon", email = "dumpy.spam.man@gmail.com"}
]
maintainers = [
    {name = "DragonMoffon", email = "dumpy.spam.man@gmail.com"}
]
