[project]
name="Lux-Aenigma"
description="A short light based puzzle game built with Python Arcade"
license = {text = "MIT License"}
readme="README.md"
version="26.03.2024.0"
dependencies=[
    "arcade@ git+https://github.com/pythonarcade/arcade#egg=development",
    "imgui[pyglet]",
    "digiformatter",
    "tomlkit"
]
requires-python= ">= 3.11"
authors =  [
    {name = "DragonMoffon", email = "dumpy.spam.man@gmail.com"}
]
maintainers = [
    {name = "DragonMoffon", email = "dumpy.spam.man@gmail.com"}
]

[tool.setuptools]
packages = ["lux"]

# There are multiple things called lux that are CLI
# applications, so we name the cli run script luxgame.
[project.scripts]
luxgame = "lux.lux:main"
